--- a/src/v-viewport/template.html
+++ b/src/v-viewport/template.html
@@ -1,19 +1,20 @@
 <div class="v-object">{{compProps}}
-    <v-rect :x-transform="xTransform" 
+    <v-rect :layout-direction="layoutDirection" :layout-type="layoutType"
+        :x-transform="xTransform" 
         :y-transform="yTransform"
         :real-max-x="realMaxX"
         :real-max-y="realMaxY"
         :real-min-x="realMinX"
         :real-min-y="realMinY"
-        :constrained="false"
         :view-width="viewWidth"
         :view-height="viewHeight"
         :view-pos-x="offsetX"
         :view-pos-y="offsetY"
+        :constrained="false"
         :enabled="true"
         :clipped="clipped"
         :line-width="0"
-        :fill-color="0xFFFF00"
+        :fill-color="fillColor || 0xFFFFFF"
         :draggable="pan !== 'none'"
         :drag-constraint="pan"
         :onmouseover="detectCursor"
