--- a/src/v-cartersian/template.html
+++ b/src/v-cartersian/template.html
@@ -2,7 +2,7 @@
     <div v-if="debug" class="v-object">{{compProps}}
         ${require('./fragment.html')}
     </div>
-    <fragment v-if="!debug" :props="compProps">
+    <fragment v-if="!debug" props="compProps">
         ${require('./fragment.html')}
     </fragment>
 </fragment>
