--- a/src/v-scene/template.html
+++ b/src/v-scene/template.html
@@ -1,8 +1,8 @@
-<fragment>
+<div>
     <div v-if="debug" style="padding-left:12px;" class="v-scene">{{compProps}}
         <slot />
     </div>
     <fragment v-if="!debug" :props="compProps">
         <slot />
     </fragment>
-</fragment>
+</div>
