--- a/src/v-layer/template.html
+++ b/src/v-layer/template.html
@@ -1,8 +1,8 @@
 <div>
     <div v-if="debug" class="v-object" style="padding-left:12px;">{{compProps}}
-        <slot />
+        ${require('./fragment.html')}
     </div>
     <fragment v-if="!debug" :props="compProps">
-        <slot />
+        ${require('./fragment.html')}
     </fragment>
 </div>
