--- a/src/v-cartersian/fragment.html
+++ b/src/v-cartersian/fragment.html
@@ -1,6 +1,6 @@
 <v-axis 
     :fill-transparency="0.001"
-    axis="x" :view-width="viewWidth" :view-height="viewHeight"
+    axis="x" :view-width="width" :view-height="height"
     :real-min-x="realMinX" :real-max-x="realMaxX" :x-transform="xTransform"
     :major-ticks="majorTicksX" :minor-ticks="minorTicksX" :major-tick-length="majorTickLengthX"
     :tick-label-position="tickLabelPositionX || tickLabelPosition" :grid="gridX||grid" 
@@ -8,7 +8,7 @@
     :space-component="this">
     <v-axis 
         :fill-transparency="0.001"
-        axis="y" :view-width="viewWidth" :view-height="viewHeight" 
+        axis="y" :view-width="width" :view-height="height" 
         :real-min-y="realMinY" :real-max-y="realMaxY" :y-transform="yTransform"
         :major-ticks="majorTicksY" :minor-ticks="minorTicksY" :major-tick-length="majorTickLengthY"
         :tick-label-position="tickLabelPositionY||tickLabelPosition" :grid="gridY||grid" 
