update v-object and v-* extended v-object

--- a/src/v-layer/fragment.html
+++ b/src/v-layer/fragment.html
@@ -1,6 +1,6 @@
 <slot />
 <v-textbox-sticky v-for="(message, idx) in tooltips" :line-width="0" :key="idx" 
-    fill-color="#FFFFCC" :content-style="{fontSize: 12, fontWeight:'bold', stroke:'#FFFFFF', strokeThickness:4}"
+    fill-color="#FFFFCC" :content-style="message.tooltipStyle"
     :fill-transparency="message.fillTransparency"
     :view-pos-x="message.viewPosX" :view-pos-y="message.viewPosY" 
     :content="message.content">
