--- a/src/v-shading/fragment.html
+++ b/src/v-shading/fragment.html
@@ -1,10 +1,16 @@
 <fragment v-if="isShading">
-    <v-path 
-        :real-path="shadingPathLeft" :line-width="3" :line-transparency="0.5" 
-        :line-color-list="shadingColorList" :shading-offset-x="2">
+    <v-path
+        symbol-color="0x000000"
+        :view-height="viewHeight" :view-width="viewWidth"
+        :real-path="shadingPathLeft" :line-width="3" 
+        :line-transparency="0.3" 
+        :shading-offset-x="2" :shading-offset-y="-1">
     </v-path>
-    <v-path 
-        :real-path="shadingPathRight" :line-width="3" :line-transparency="0.5" 
-        :line-color-list="shadingColorList" :shading-offset-x="-2">
+    <v-path
+        symbol-color="0x000000"
+        :view-height="viewHeight" :view-width="viewWidth"
+        :real-path="shadingPathRight" :line-width="3" 
+        :line-transparency="0.3"
+         :shading-offset-x="-3.5" :shading-offset-y="-1">
     </v-path>
 </fragment>
