--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -1,17 +1,26 @@
 <v-resizable 
-    :view-pos-x="viewPosX || 0" :view-pos-y="viewPosY || 0"
+    :view-pos-x="0" :view-pos-y="0"
     :view-width="trackViewWidth" :view-height="viewHeight"
-    direction="horizontal" :knob-flags="[true, true]"
+    direction="horizontal" :knob-flags="trackKnobFlags || [false, true]"
     line-color="0x010101" :line-width="1"
     :fill-color="fillColor" :fill-transparency="fillTransparency"
     :size="5" :x-transform="xTransform" :y-transform="yTransform"
     :real-min-x="realMinX" :real-max-x="realMaxX"
     :real-min-y="realMinY" :real-max-y="realMaxY"
     :on-resize="trackResize">
-    <v-resizable :view-pos-x="0" :view-pos-y="0"
+    <v-rect :view-pos-x="0" :view-pos-y="0"
+        :view-width="trackViewWidth" :view-height="20"
+        :line-width="0.5" line-color="0x010101"
+        :fill-color="0x3366ff">
+        <v-textbox :content="name"
+            :content-style="headerContentStyle"
+            :view-pos-x="trackViewWidth/2 - textWidth(name)/2"
+            :view-pos-y="10 - textHeight(name) / 2"
+        />
+    </v-rect>
+    <v-resizable :view-pos-x="0" :view-pos-y="20"
         :view-height="trackHeaderHeight" :view-width="trackViewWidth"
-        line-color="0x010101" :line-width="1"
-        direction="vertical" :knob-flags="[true, true]"
+        direction="vertical" :knob-flags="trackKnobFlags || [false, true]"
         :fill-color="trackHeaderFillColor || '0xFFFFFF'" :fill-transparency="fillTransparency"
         :size="5" :on-resize="trackHeaderResize"
         x-transform="none" y-transform="none">
@@ -30,20 +39,52 @@
                 :view-width="trackViewWidth" :view-height="child.height"
                 :fill-color="0xFFFFFF" 
                 x-transform="none" y-transform="none"
-                :fill-transparency="1"
+                :fill-transparency="0"
                 line-color="0x080808" :line-width="1"
                 :line-transparency="child.comp === 'VCurve' ? 0 : 1"
                 :onmousedown="childHighlight">
+                    <fragment v-if="child.comp === 'VShading'">
+                        <v-textbox 
+                            :content="child.curveLowValue" :fill-color="0xFFFFFF"
+                            :fill-transparency="1" 
+                            :line-color="0x101010" :line-width="1"
+                            :content-style="headerContentStyle"
+                            :view-width="textWidth(child.curveLowValue) + 5"
+                            :view-height="textHeight(child.curveLowValue)"
+                            :view-pos-x="5"
+                            :view-pos-y="child.height/2 - textHeight(child.curveLowValue) / 2"
+                        />
+                        <v-textbox
+                            :content="child.name" :fill-color="child.shading ? '0xffc2b3' : '0xFFFFFF'"
+                            :fill-transparency="1"
+                            line-color="0x010101" :line-width="1"
+                            :view-width="textWidth(child.name) + 10"
+                            :view-height="textHeight(child.name)"
+                            :content-style="headerContentStyle"
+                            :view-pos-x="trackViewWidth/2 - (textWidth(child.name) + 10) / 2"
+                            :view-pos-y="child.height/2 - textHeight(child.name) / 2"
+                        />
+                        <v-textbox 
+                            :content="child.curveHighValue" :fill-color="0xFFFFFF"
+                            :fill-transparency="1" 
+                            :line-color="0x101010" :line-width="1"
+                            :content-style="headerContentStyle"
+                            :view-width="textWidth(child.curveHighValue) + 5"
+                            :view-height="textHeight(child.curveHighValue)"
+                            :view-pos-x="trackViewWidth - textHeight(child.curveHighValue) - 10"
+                            :view-pos-y="child.height/2 - textHeight(child.curveHighValue) / 2"
+                        />
+                    </fragment>
                     <v-textbox
-                        v-if="child.comp === 'VShading' || child.comp === 'VPath'"
-                        :content="child.name" :fill-color="child.shading ? '0xF00000' : '0xFFFFFF'"
+                        v-if="child.comp === 'VPath'"
+                        :content="child.name" :fill-color="child.shading ? '0xffc2b3' : '0xFFFFFF'"
                         :fill-transparency="1"
                         line-color="0x010101" :line-width="1"
-                        :view-width="13/ 26 * textWidth(child.name) + 10"
-                        :view-height="13/ 26 * textHeight(child.name)"
+                        :view-width="textWidth(child.name) + 10"
+                        :view-height="textHeight(child.name)"
                         :content-style="headerContentStyle"
-                        :view-pos-x="trackViewWidth/2 - (13/ 26 * textWidth(child.name) + 10) / 2"
-                        :view-pos-y="child.height/2 - (13/ 26 * textHeight(child.name)) / 2"
+                        :view-pos-x="trackViewWidth/2 - (textWidth(child.name) + 10) / 2"
+                        :view-pos-y="child.height/2 - textHeight(child.name) / 2"
                         />
                     <v-header-curve 
                         v-if="child.comp === 'VCurve'"
@@ -62,26 +103,27 @@
             </v-rect>
         </v-viewport>
     </v-resizable>
-    <v-viewport :view-pos-x="0" :view-pos-y="trackHeaderHeight || viewPosY || 0"
+    <v-viewport :view-pos-x="0" :view-pos-y="(trackHeaderHeight || 0) + 20"
         :view-width="trackViewWidth" :view-height="trackBodyHeight || viewHeight"
-        :viewport-width="trackViewWidth" :viewport-height="viewHeight - (trackHeaderHeight || 0)"
+        :viewport-width="trackViewWidth" :viewport-height="viewHeight - (trackHeaderHeight || 0) - 20"
         :x-transform="xTransform" :y-transform="yTransform"
         line-color="0x000000" :line-width="1"
         :real-min-x="realMinX" :real-max-x="realMaxX"
         :real-min-y="realMinY" :real-max-y="realMaxY">
-        <v-cartersian
+        <v-cartersian-ext-mouse
             :view-pos-x="0" :view-pos-y="0"
+            :name="generateRandomStr()"
             :view-width="trackViewWidth" :view-height="trackBodyHeight || viewHeight"
             :real-min-x="realMinX" :real-max-x="realMaxX"
             :real-min-y="realMinY" :real-max-y="realMaxY"
             :fill-color="checkShading ? '0xF0F000' : '0xFFFFFF'"
             :fill-transparency="checkShading ? 0.2 : 1"
-            :enabled="true"
-            :onmousedown="trackMouseDown" cursor="crosshair"
+            :enabled="true" cursor="crosshair"
             :x-transform="xTransform" :y-transform="yTransform"
             line-color="0x000000" :line-width="1"
             :major-ticks-y="Math.floor((trackBodyHeight || viewHeight) / 150)" :minor-ticks-y="5"
             :major-ticks-x="1" :minor-ticks-x="5"
+            :on-ext-mouse-pos="genTooltip"
             :grid="true">
             <v-rect :view-pos-x="0" :view-pos-y="0"
                 ref="trackChildren"
@@ -98,6 +140,6 @@
                 :line-transparency="0.3" 
                 :shading-offset-x="-2" :shading-offset-y="-2">
             </v-path>
-        </v-cartersian>
+        </v-cartersian-ext-mouse>
     </v-viewport>
 </v-resizable>
