--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -1,32 +1,24 @@
-<v-resizable 
-    :view-pos-x="0" :view-pos-y="0"
-    :view-width="trackViewWidth" :view-height="viewHeight"
-    direction="horizontal" :knob-flags="trackKnobFlags || [false, true]"
-    line-color="0x010101" :line-width="1"
-    :fill-color="fillColor" :fill-transparency="fillTransparency"
-    :size="5" :x-transform="xTransform" :y-transform="yTransform"
-    :real-min-x="realMinX" :real-max-x="realMaxX"
-    :real-min-y="realMinY" :real-max-y="realMaxY"
-    :on-resize="trackResize">
+<fragment>
+    ${require('../v-resizable/fragment.html')}
     <v-rect :view-pos-x="0" :view-pos-y="0"
-        :view-width="trackViewWidth" :view-height="20"
+        :view-width="viewWidth" :view-height="20"
         :line-width="0.5" line-color="0x010101"
         :fill-color="0x3366ff">
         <v-textbox :content="name"
             :content-style="headerContentStyle"
-            :view-pos-x="trackViewWidth/2 - textWidth(name)/2"
+            :view-pos-x="viewWidth/2 - textWidth(name)/2"
             :view-pos-y="10 - textHeight(name) / 2"
         />
     </v-rect>
     <v-resizable :view-pos-x="0" :view-pos-y="20"
-        :view-height="trackHeaderHeight" :view-width="trackViewWidth"
-        direction="vertical" :knob-flags="trackKnobFlags || [false, true]"
+        :view-height="trackHeaderHeight - 20" :view-width="viewWidth"
+        direction="vertical" :knob-flags="[false, true]"
         :fill-color="trackHeaderFillColor || '0xFFFFFF'" :fill-transparency="fillTransparency"
         :size="5" :on-resize="trackHeaderResize"
         x-transform="none" y-transform="none">
         <v-viewport :view-pos-x="0" :view-pos-y="0"
-            :view-width="trackViewWidth" :view-height="Math.max(trackHeaderHeight, trackHeaderChildrenHeight)"
-            :viewport-width="trackViewWidth" :viewport-height="trackHeaderHeight"
+            :view-width="viewWidth" :view-height="Math.max(trackHeaderHeight - 20, trackHeaderChildrenHeight)"
+            :viewport-width="viewWidth" :viewport-height="trackHeaderHeight - 20"
             x-transform="none" y-transform="none"
             line-color="0x000000" :line-width="1">
             <v-rect v-for="(child, idx) in visualizeItems"
@@ -36,7 +28,7 @@
                 :type-fill-color="child.typeFillColor"
                 :min-color="child.minColor" :max-color="child.maxColor"
                 :pallete="child.pallete"
-                :view-width="trackViewWidth" :view-height="child.height"
+                :view-width="viewWidth" :view-height="child.height"
                 :fill-color="0xFFFFFF" 
                 x-transform="none" y-transform="none"
                 :fill-transparency="0"
@@ -45,6 +37,7 @@
                 :onmousedown="childHighlight">
                     <fragment v-if="child.comp === 'VShading'">
                         <v-textbox 
+                            v-if="child.curveLowValue"
                             :content="child.curveLowValue" :fill-color="0xFFFFFF"
                             :fill-transparency="1" 
                             :line-color="0x101010" :line-width="1"
@@ -61,17 +54,18 @@
                             :view-width="textWidth(child.name) + 10"
                             :view-height="textHeight(child.name)"
                             :content-style="headerContentStyle"
-                            :view-pos-x="trackViewWidth/2 - (textWidth(child.name) + 10) / 2"
+                            :view-pos-x="viewWidth/2 - (textWidth(child.name) + 10) / 2"
                             :view-pos-y="child.height/2 - textHeight(child.name) / 2"
                         />
                         <v-textbox 
+                            v-if="child.curveHighValue"
                             :content="child.curveHighValue" :fill-color="0xFFFFFF"
                             :fill-transparency="1" 
                             :line-color="0x101010" :line-width="1"
                             :content-style="headerContentStyle"
                             :view-width="textWidth(child.curveHighValue) + 5"
                             :view-height="textHeight(child.curveHighValue)"
-                            :view-pos-x="trackViewWidth - textHeight(child.curveHighValue) - 10"
+                            :view-pos-x="viewWidth - textHeight(child.curveHighValue) - 10"
                             :view-pos-y="child.height/2 - textHeight(child.curveHighValue) / 2"
                         />
                     </fragment>
@@ -83,7 +77,7 @@
                         :view-width="textWidth(child.name) + 10"
                         :view-height="textHeight(child.name)"
                         :content-style="headerContentStyle"
-                        :view-pos-x="trackViewWidth/2 - (textWidth(child.name) + 10) / 2"
+                        :view-pos-x="viewWidth/2 - (textWidth(child.name) + 10) / 2"
                         :view-pos-y="child.height/2 - textHeight(child.name) / 2"
                         />
                     <v-header-curve 
@@ -92,7 +86,7 @@
                         :view-pos-x="0" :view-pos-y="0"
                         :fill-color="child.comp === 'VCurve' && child.shading ? child.color : '0xFFFFFF'" 
                         :fill-transparency="child.shading ? 0.2 : 1"
-                        :view-width="trackViewWidth" :view-height="child.height"
+                        :view-width="viewWidth" :view-height="child.height"
                         :content-style="{...headerContentStyle, fill: child.color}"
                         :unit="child.unit"
                         :left-value="child.leftValue"
@@ -103,17 +97,18 @@
             </v-rect>
         </v-viewport>
     </v-resizable>
-    <v-viewport :view-pos-x="0" :view-pos-y="(trackHeaderHeight || 0) + 20"
-        :view-width="trackViewWidth" :view-height="trackBodyHeight || viewHeight"
-        :viewport-width="trackViewWidth" :viewport-height="viewHeight - (trackHeaderHeight || 0) - 20"
+    <v-viewport :view-pos-x="0" :view-pos-y="trackHeaderHeight"
+        ref="viewportBody"
+        :view-width="viewWidth" :view-height="scaleTrackHeight"
+        :viewport-width="viewWidth" :viewport-height="viewHeight - trackHeaderHeight"
         :x-transform="xTransform" :y-transform="yTransform"
         line-color="0x000000" :line-width="1"
         :real-min-x="realMinX" :real-max-x="realMaxX"
         :real-min-y="realMinY" :real-max-y="realMaxY">
         <v-cartersian-ext-mouse
             :view-pos-x="0" :view-pos-y="0"
-            :name="generateRandomStr()"
-            :view-width="trackViewWidth" :view-height="trackBodyHeight || viewHeight"
+            :name="name"
+            :view-width="viewWidth" :view-height="scaleTrackHeight"
             :real-min-x="realMinX" :real-max-x="realMaxX"
             :real-min-y="realMinY" :real-max-y="realMaxY"
             :fill-color="checkShading ? '0xF0F000' : '0xFFFFFF'"
@@ -121,13 +116,14 @@
             :enabled="true" cursor="crosshair"
             :x-transform="xTransform" :y-transform="yTransform"
             line-color="0x000000" :line-width="1"
-            :major-ticks-y="Math.floor((trackBodyHeight || viewHeight) / 150)" :minor-ticks-y="5"
+            :major-ticks-y="Math.floor(scaleTrackHeight  / 150)" :minor-ticks-y="5"
             :major-ticks-x="1" :minor-ticks-x="5"
+            :onmousedown="onTrackMouseDown"
             :on-ext-mouse-pos="genTooltip"
             :grid="true">
             <v-rect :view-pos-x="0" :view-pos-y="0"
                 ref="trackChildren"
-                :view-width="trackViewWidth" :view-height="trackBodyHeight || viewHeight"
+                :view-width="viewWidth" :view-height="scaleTrackHeight"
                 :x-transform="xTransform" :y-transform="yTransform"
                 :real-min-x="realMinX" :real-max-x="realMaxX"
                 :real-min-y="realMinY" :real-max-y="realMaxY"
@@ -135,11 +131,11 @@
                 <slot />
             </v-rect>
             <v-path v-for="(path, idx) in pathList" :key="idx"
-                :symbol-color="shadingColor" :view-width="trackViewWidth"
+                :symbol-color="shadingColor" :view-width="viewWidth"
                 :real-path="path" :line-width="3" 
                 :line-transparency="0.3" 
                 :shading-offset-x="-2" :shading-offset-y="-2">
             </v-path>
         </v-cartersian-ext-mouse>
     </v-viewport>
-</v-resizable>
+</fragment>
