fix v-track, v-header-curve

--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -26,6 +26,9 @@
                 :view-pos-x="0" :view-pos-y="childrenHeaderPosYList[idx]"
                 :enabled="true"
                 :type-fill-color="child.typeFillColor"
+                :foreground-color="child.foregroundColor"
+                :background-color="child.backgroundColor"
+                :image-pattern-url="child.imagePatternUrl"
                 :min-color="child.minColor" :max-color="child.maxColor"
                 :pallete="child.pallete"
                 :view-width="viewWidth" :view-height="child.height"
