--- a/src/v-track-2/fragment.html
+++ b/src/v-track-2/fragment.html
@@ -1,42 +1,33 @@
-<v-resizable 
-    :view-pos-x="0" :view-pos-y="0"
-    :view-width="trackViewWidth" :view-height="viewHeight"
-    direction="horizontal" :knob-flags="trackKnobFlags || [false, true]"
-    line-color="0x010101" :line-width="1"
-    :fill-color="fillColor" :fill-transparency="fillTransparency"
-    :size="5" :x-transform="xTransform" :y-transform="yTransform"
-    :real-min-x="realMinX" :real-max-x="realMaxX"
-    :real-min-y="realMinY" :real-max-y="realMaxY"
-    :on-resize="trackResize"
->
+<fragment>
+    ${require('../v-resizable/fragment.html')}
     <v-rect :view-pos-x="0" :view-pos-y="0"
-        :view-width="trackViewWidth" :view-height="20"
+        :view-width="width" :view-height="20"
         :line-width="0.5" line-color="0x010101"
         :fill-color="0x3366ff"
     >
         <v-textbox :content="name"
             :content-style="headerContentStyle"
-            :view-pos-x="trackViewWidth/2 - textWidth(name)/2"
+            :view-pos-x="width/2 - textWidth(name)/2"
             :view-pos-y="10 - textHeight(name) / 2"
         />
     </v-rect>
     <v-resizable :view-pos-x="0" :view-pos-y="20"
-        :view-height="trackHeaderHeight" :view-width="trackViewWidth"
+        :view-height="trackHeaderHeight - 20" :view-width="width"
         direction="vertical" :knob-flags="trackKnobFlags || [false, true]"
-        :fill-color="trackHeaderFillColor || '0xFFFFFF'" :fill-transparency="fillTransparency"
+        :fill-color="fillColor" :fill-transparency="fillTransparency"
         :size="5" :on-resize="trackHeaderResize"
         x-transform="none" y-transform="none"
     >
         <v-viewport :view-pos-x="0" :view-pos-y="0"
-            :view-width="trackViewWidth" :view-height="Math.max(trackHeaderHeight, trackHeaderChildrenHeight)"
-            :viewport-width="trackViewWidth" :viewport-height="trackHeaderHeight"
+            :view-width="width" :view-height="Math.max(listZoneHeaderHeight, trackHeaderHeight)"
+            :viewport-width="width" :viewport-height="trackHeaderHeight - 20"
             x-transform="none" y-transform="none"
             line-color="0x000000" :line-width="1"
         >
-            <v-rect
-                :view-pos-x="0" :view-pos-y="0"
+            <v-rect v-for="(zone, idx) in zoneList" :key="idx"
+                :view-pos-x="0" :view-pos-y="idx * (textHeight(zone.name) + 15)"
                 :enabled="true"
-                :view-width="trackViewWidth" :view-height="textHeight(zoneHeaderLabel) + 15"
+                :view-width="width" :view-height="textHeight(zone.name) + 15"
                 :fill-color="0xFFFFFF" 
                 x-transform="none" y-transform="none"
                 :fill-transparency="0"
@@ -44,44 +35,44 @@
                 :line-transparency="1"
             >
                 <v-textbox
-                    :content="zoneHeaderLabel" fill-color="'0xFFFFFF'"
+                    :content="zone.name" fill-color="'0xFFFFFF'"
                     :fill-transparency="1"
                     line-color="0x010101" :line-width="1"
-                    :view-width="textWidth(zoneHeaderLabel) + 10"
-                    :view-height="textHeight(zoneHeaderLabel) + 5"
+                    :view-width="textWidth(zone.name) + 10"
+                    :view-height="textHeight(zone.name) + 5"
                     :content-style="headerContentStyle"
-                    :view-pos-x="trackViewWidth/2 - textWidth(zoneHeaderLabel) / 2"
+                    :view-pos-x="width/2 - textWidth(zoneHeaderLabel) / 2"
                     :view-pos-y="5  "
                 />
             </v-rect>
         </v-viewport>
     </v-resizable>
-    <v-viewport-ext-mouse :view-pos-x="0" :view-pos-y="(trackHeaderHeight || 0) + 20"
-        :view-width="trackViewWidth" :view-height="trackBodyHeight || viewHeight"
-        :viewport-width="trackViewWidth" :viewport-height="viewHeight - (trackHeaderHeight || 0) - 20"
+
+    <!--    Body    -->
+    <v-viewport :view-pos-x="0" :view-pos-y="trackHeaderHeight"
+        ref="trackBodyViewPort"
+        :view-width="width" :view-height="scaleViewHeight"
+        :viewport-width="width" :viewport-height="viewHeight - trackHeaderHeight"
         :x-transform="xTransform" :y-transform="yTransform"
         line-color="0x000000" :line-width="1"
         :real-min-x="realMinX" :real-max-x="realMaxX"
         :real-min-y="realMinY" :real-max-y="realMaxY"
         :on-ext-mouse-pos="genTooltip"
     >
-        <v-xone v-for="(zone, idx) in zoneList"
-            :key="idx"
-            :knob-flags="[true, true]"
-            :fill-color="zone.fillColor"
-            :name="zone.label" 
-            direction="vertical"
-            :real-min-y="zone.realMinY"
-            :real-max-y="zone.realMaxY"
-            y-transform="linear"
-            :line-width="1"
-            :line-color="0x888888"
-            :content="zone.label"
-            :content-style="labelStyle"
-            :no-label="false"
-            :no-fill="false"
-            x-transform="none"
-            :view-width="trackViewWidth"
-        />
-    </v-viewport-ext-mouse>
-</v-resizable>
+        <v-cartersian-ext-mouse
+            ref="zoneTrackList"
+            :view-width="width" :view-height="scaleViewHeight"
+            :enabled="false" :draggable="false"
+            :fill-color="fillColor" :line-width="1" :line-color="0x010101"
+            :real-min-x="realMinX" :real-max-x="realMaxX"
+            :real-min-y="realMinY" :real-max-y="realMaxY" 
+            x-transform="linear" y-transform="linear"
+            :major-ticks-x="0" :minor-ticks-x="0"
+            :major-ticks-y="0" :minor-ticks-y="0"
+            :grid="false"
+            :on-ext-mouse-pos="genTooltip"
+        >
+            <slot />
+        </v-cartersian-ext-mouse>   
+    </v-viewport>
+</fragment>
