--- a/src/v-shading/fragment.html
+++ b/src/v-shading/fragment.html
@@ -1,16 +1,16 @@
-<fragment v-if="isShading">
+<fragment v-if="isSelected">
     <v-path
         symbol-color="0x000000"
         :view-height="viewHeight" :view-width="viewWidth"
         :real-path="shadingPathLeft" :line-width="3" 
         :line-transparency="0.3" 
-        :shading-offset-x="2" :shading-offset-y="-1">
+        :shading-offset-x="-2" :shading-offset-y="-2">
     </v-path>
     <v-path
         symbol-color="0x000000"
         :view-height="viewHeight" :view-width="viewWidth"
         :real-path="shadingPathRight" :line-width="3" 
         :line-transparency="0.3"
-         :shading-offset-x="-2.5" :shading-offset-y="-1">
+         :shading-offset-x="1" :shading-offset-y="-2">
     </v-path>
 </fragment>
