--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -22,8 +22,9 @@
             x-transform="none" y-transform="none"
             line-color="0x000000" :line-width="1">
             <!-- TO BE CHANGED: tao 1 class moi v-item-header => track header visualize items -->
-            <v-rect v-for="(child, idx) in visualizeItems" 
-                :key = "child.name + ' ' + idx" :name="child.comp + ' ' + idx"
+            <v-rect
+                v-for="(child, idx) in onRefsReady()" 
+                :key = "child.name + ' ' + idx" :name="child.componentType + ' ' + idx"
                 :view-pos-x="0" :view-pos-y="childrenHeaderPosYList[idx]"
                 :enabled="true"
                 :type-fill-color="child.typeFillColor"
@@ -32,14 +33,14 @@
                 :image-pattern-url="child.imagePatternUrl"
                 :min-color="child.minColor" :max-color="child.maxColor"
                 :pallete="child.pallete"
-                :view-width="viewWidth" :view-height="child.height"
+                :view-width="viewWidth" :view-height="child.componentType === 'Curve' ? 60: 30"
                 :fill-color="0xFFFFFF" 
                 x-transform="none" y-transform="none"
                 :fill-transparency="0"
                 line-color="0x080808" :line-width="1"
-                :line-transparency="child.comp === 'VCurve' ? 0 : 1"
+                :line-transparency="child.componentType === 'VCurve' ? 0 : 1"
                 :onmousedown="childHighlight">
-                    <fragment v-if="child.comp === 'VShading'">
+                    <fragment v-if="child.componentType === 'VShading'">
                         <v-textbox 
                             v-if="child.curveLowValue"
                             :content="child.curveLowValue" :fill-color="0xFFFFFF"
@@ -49,17 +50,17 @@
                             :view-width="textWidth(child.curveLowValue) + 5"
                             :view-height="textHeight(child.curveLowValue)"
                             :view-pos-x="5"
-                            :view-pos-y="child.height/2 - textHeight(child.curveLowValue) / 2"
+                            :view-pos-y="15 - textHeight(child.curveLowValue) / 2"
                         />
                         <v-textbox
-                            :content="child.name" :fill-color="child.selected ? '0xffc2b3' : '0xFFFFFF'"
-                            :fill-transparency="1"
+                            :content="child.name || child.componentType + ' ' + idx" :fill-color="selectionStates[idx] ? '0xffc2b3' : '0xFFFFFF'"
+                            :fill-transparency="1"selected
                             line-color="0x010101" :line-width="1"
-                            :view-width="textWidth(child.name) + 10"
-                            :view-height="textHeight(child.name)"
+                            :view-width="textWidth(child.name || child.componentType + ' ' + idx) + 10"
+                            :view-height="textHeight(child.name || child.componentType + ' ' + idx)"
                             :content-style="headerContentStyle"
-                            :view-pos-x="viewWidth/2 - (textWidth(child.name) + 10) / 2"
-                            :view-pos-y="child.height/2 - textHeight(child.name) / 2"
+                            :view-pos-x="viewWidth/2 - (textWidth(child.name || child.componentType + ' ' + idx) + 10) / 2"
+                            :view-pos-y="15 - textHeight(child.name || child.componentType + ' ' + idx) / 2"
                         />
                         <v-textbox 
                             v-if="child.curveHighValue"
@@ -70,33 +71,22 @@
                             :view-width="textWidth(child.curveHighValue) + 5"
                             :view-height="textHeight(child.curveHighValue)"
                             :view-pos-x="viewWidth - textHeight(child.curveHighValue) - 10"
-                            :view-pos-y="child.height/2 - textHeight(child.curveHighValue) / 2"
+                            :view-pos-y="15 - textHeight(child.curveHighValue) / 2"
                         />
                     </fragment>
-                    <v-textbox
-                        v-if="child.comp === 'VPath'"
-                        :content="child.name" :fill-color="child.selected ? '0xffc2b3' : '0xFFFFFF'"
-                        :fill-transparency="1"
-                        line-color="0x010101" :line-width="1"
-                        :view-width="textWidth(child.name) + 10"
-                        :view-height="textHeight(child.name)"
-                        :content-style="headerContentStyle"
-                        :view-pos-x="viewWidth/2 - (textWidth(child.name) + 10) / 2"
-                        :view-pos-y="child.height/2 - textHeight(child.name) / 2"
-                        />
                     <v-header-curve 
-                        v-if="child.comp === 'VCurve'"
-                        :curve-name="child.name"
+                        v-if="child.componentType === 'VCurve'"
+                        :curve-name="child.name || child.componentType + ' ' + idx"
                         :view-pos-x="0" :view-pos-y="0"
-                        :fill-color="child.comp === 'VCurve' && child.selected ? child.color : '0xFFFFFF'" 
-                        :fill-transparency="child.selected ? 0.2 : 1"
-                        :view-width="viewWidth" :view-height="child.height"
-                        :content-style="{...headerContentStyle, fill: child.color}"
+                        :fill-color="selectionStates[idx] ? child.symbolColor : '0xFFFFFF'" 
+                        :fill-transparency="selectionStates[idx] ? 0.2 : 1"
+                        :view-width="viewWidth" :view-height="60"
+                        :content-style="{...headerContentStyle, fill: child.symbolColor}"
                         :unit="child.unit"
                         :left-value="child.leftValue"
                         :right-value="child.rightValue"
                         :line-dash="child.lineDash"
-                        :path-color="child.color"
+                        :path-color="child.symbolColor"
                     />
             </v-rect>
         </v-viewport>
@@ -125,15 +115,16 @@
             :onmousedown="onTrackMouseDown"
             :on-ext-mouse-pos="genTooltip"
             :grid="true">
-            <v-rect :view-pos-x="0" :view-pos-y="0"
+            <v-rect-with-mounted-event :view-pos-x="0" :view-pos-y="0"
                 ref="trackChildren"
+                :on-mounted-fn="onRefsReady"
                 :view-width="viewWidth" :view-height="scaleTrackHeight"
                 :x-transform="xTransform" :y-transform="yTransform"
                 :real-min-x="realMinX" :real-max-x="realMaxX"
                 :real-min-y="realMinY" :real-max-y="realMaxY"
                 fill-color="0xFFFFFF" :fill-transparency="0.001">
                 <slot />
-            </v-rect>
+            </v-rect-with-mounted-event>
             <!-- <v-path v-for="(path, idx) in pathList" :key="idx"
                 :symbol-color="shadingColor" :view-width="viewWidth"
                 :real-path="path" :line-width="3" 
