--- a/src/v-xone/template.html
+++ b/src/v-xone/template.html
@@ -13,7 +13,7 @@
 
     
 
-    <fragment v-if="!debug" :props="compProps">
+    <fragment v-if="!debug">
         <v-text-box
             :content="content"
             :view-pos-x="textPosX"
