--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -34,11 +34,11 @@
                 :min-color="child.minColor" :max-color="child.maxColor"
                 :pallete="child.pallete"
                 :view-width="viewWidth" :view-height="child.componentType === 'Curve' ? 60: 30"
-                :fill-color="0xFFFFFF" 
+                :fill-color="child.componentType !== 'VZone' ? '0xFFFFFF' : child.fillColor" 
                 x-transform="none" y-transform="none"
-                :fill-transparency="0"
+                :fill-transparency="child.componentType !== 'VZone' ? 0 : 1"
                 line-color="0x080808" :line-width="1"
-                :line-transparency="child.componentType === 'VCurve' ? 0 : 1"
+                :line-transparency="child.componentType !== 'VCurve' ? 1 : 0"
                 :onmousedown="childHighlight">
                     <fragment v-if="child.componentType === 'VShading'">
                         <v-textbox 
@@ -53,7 +53,8 @@
                             :view-pos-y="15 - textHeight(child.curveLowValue) / 2"
                         />
                         <v-textbox
-                            :content="child.name || child.componentType + ' ' + idx" :fill-color="selectionStates[idx] ? '0xffc2b3' : '0xFFFFFF'"
+                            :content="child.name || child.componentType + ' ' + idx"
+                            :fill-color="selectionStates[idx] ? '0xffc2b3' : '0xFFFFFF'"
                             :fill-transparency="1"selected
                             line-color="0x010101" :line-width="1"
                             :view-width="textWidth(child.name || child.componentType + ' ' + idx) + 10"
@@ -88,6 +89,17 @@
                         :line-dash="child.lineDash"
                         :path-color="child.symbolColor"
                     />
+                    <v-textbox
+                        v-if="child.componentType === 'VZone'"
+                        :content="child.name || child.componentType + ' ' + idx" :fill-color="selectionStates[idx] ? '0xffc2b3' : '0xFFFFFF'"
+                        :fill-transparency="1"selected
+                        line-color="0x010101" :line-width="1"
+                        :view-width="textWidth(child.name || child.componentType + ' ' + idx) + 10"
+                        :view-height="textHeight(child.name || child.componentType + ' ' + idx)"
+                        :content-style="headerContentStyle"
+                        :view-pos-x="viewWidth/2 - (textWidth(child.name || child.componentType + ' ' + idx) + 10) / 2"
+                        :view-pos-y="15 - textHeight(child.name || child.componentType + ' ' + idx) / 2"
+                    />
             </v-rect>
         </v-viewport>
     </v-resizable>
@@ -101,7 +113,7 @@
         :real-min-y="realMinY" :real-max-y="realMaxY">
         <v-cartersian-ext-mouse
             :view-pos-x="0" :view-pos-y="0"
-            :name="name"
+            :name="name" :grid="grid"
             :view-width="viewWidth" :view-height="scaleTrackHeight"
             :real-min-x="realMinX" :real-max-x="realMaxX"
             :real-min-y="realMinY" :real-max-y="realMaxY"
@@ -110,11 +122,10 @@
             :enabled="true" cursor="crosshair"
             :x-transform="xTransform" :y-transform="yTransform"
             line-color="0x000000" :line-width="1"
-            :major-ticks-y="Math.floor(scaleTrackHeight  / 150)" :minor-ticks-y="5"
-            :major-ticks-x="1" :minor-ticks-x="5"
+            :major-ticks-y="grid && Math.floor(scaleTrackHeight  / 150)" :minor-ticks-y="grid && 5"
+            :major-ticks-x="grid && 1" :minor-ticks-x="grid && 5"
             :onmousedown="onTrackMouseDown"
-            :on-ext-mouse-pos="genTooltip"
-            :grid="true">
+            :on-ext-mouse-pos="genTooltip">
             <v-rect-with-mounted-event :view-pos-x="0" :view-pos-y="0"
                 ref="trackChildren"
                 :on-mounted-fn="onRefsReady"
