fix store v-plot

--- a/src/v-plot/fragment.html
+++ b/src/v-plot/fragment.html
@@ -1,2 +1,2 @@
 <div>{{ cName }}</div>
-<pre>{{ JSON.stringify(($store.state[moduleName] || {}).plot, undefined, 2) }}</pre>
+<pre>{{ JSON.stringify($store.state.plot, undefined, 2) }}</pre>
